fix: Random Push

--- a/Bustle/bustle/data/resources/ui/window.ui
+++ b/Bustle/bustle/data/resources/ui/window.ui
@@ -337,7 +337,7 @@
                     </property>
                   </object>
               </property>
-              <!-- << Change -->
+              <!-- << Changes -->
           </object>
         </property>
       </object>
